nlp/external-volume/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: watson-nlp-container 
spec: 
  selector: 
    matchLabels: 
      app: watson-nlp-container 
  replicas: 1 
  template: 
    metadata: 
      labels: 
        app: watson-nlp-container 
    spec: 
      containers: 
      - name: watson-nlp-container 
        image: lab-registry-quay-openshift-operators.apps.ocp.lab.home/watson-libs/watson-nlp-runtime:1.0.20
        resources: 
          requests: 
            memory: "4Gi" 
            cpu: "1000m" 
          limits: 
            memory: "8Gi" 
            cpu: "2000m"
        ports: 
        - containerPort: 8085 
        volumeMounts:
        - name: model-directory
          mountPath: "/app/models"
      imagePullSecrets:
      - name: ibm-entitlement-key
      volumes:
      - name: model-directory
        emptyDir: {}
